@@ -11,6 +11,8 @@
    -  pushd: no opsize prefix generated in 16-bit code; see pushwd.asm.
    -  pushw: memory operands were rejected; see pushwd.asm.
    -  regression in v2.19: option -Sg without option -Fl caused a GPF.
+   -  string literals used as record field initializers gave error 'constant
+      expected'; see record6.asm.
 
    Other changes:
    -  sample Win32_5 updated in manual.html.
